--- a/app/views/foreman_setup/provisioners/_step3.html.erb
+++ b/app/views/foreman_setup/provisioners/_step3.html.erb
@@ -1,6 +1,6 @@
 
 <div class="well">
-  <%= wizard_header 3, _("Pre-requisites"), _("Network config"), _("Foreman installer"), _("Installation media"), _("Completion") %>
+  <%= provisioner_wizard 3 %>
 
   <div>
     <%= _("All of the necessary network information has been collected, now run the Foreman installer again with the necessary arguments to configure provisioning.") %>
