--- a/app/views/foreman_setup/provisioners/_step2.html.erb
+++ b/app/views/foreman_setup/provisioners/_step2.html.erb
@@ -7,6 +7,7 @@
     <%= _("To provision hosts, some configuration values are needed for the provisioning subnet attached to the Foreman server.") %>
   </p>
 
+  <h4><%= _("Subnet") %></h4>
   <%= f.fields_for :subnet, f.object.subnet do |sf| %>
     <%= render 'subnets/fields', :f => sf %>
   <% end %>
