--- a/app/views/foreman_setup/provisioners/_step5.html.erb
+++ b/app/views/foreman_setup/provisioners/_step5.html.erb
@@ -2,9 +2,21 @@
 <div class="well">
   <%= provisioner_wizard 5 %>
 
+  <h4><%= _("Provisioning setup complete") %></h4>
+
   <p>
-    <%= _("Provisioning setup is now fully complete.") %>
+    <%= _("All of the necessary components have been set up for provisioning support.  You can now provision new hosts by registering them from the Hosts page, then PXE-boot the server on the subnet set up earlier.") %>
   </p>
+
+  <p>
+    <%= _("The configuration set up is all accessible under the More menu, e.g. More > Provisioning > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>More > Provisioning > Provisioning Setup</b> to change settings or add new provisioning capabilities.").html_safe %>
+  </p>
+
+  <h4><%= _("Next steps") %></h4>
+
+  <%= option_button _("New Host"), new_host_path, :class => 'btn btn-success', :help_inline => _("Create and provision a new host") %>
+  <%= option_button _("Compute Resources"), compute_resources_path, :class => 'btn', :help_inline => _("Add and manage compute resources (virtualization and cloud)") %>
+  <%= option_button _("Provisioning Setup"), foreman_setup_provisioners_path, :class => 'btn', :help_inline => _("Return to the main provisioning setup page") %>
 
   <%=
   content_tag(:div, :class => "form-actions") do
