Change references of the More menu to Infrastructure

--- a/app/views/foreman_setup/provisioners/_step5.html.erb
+++ b/app/views/foreman_setup/provisioners/_step5.html.erb
@@ -9,7 +9,7 @@
   </p>
 
   <p>
-    <%= _("The configuration set up is all accessible under the More menu, e.g. More > Provisioning > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>More > Provisioning > Provisioning Setup</b> to change settings or add new provisioning capabilities.").html_safe %>
+    <%= _("The configuration set up is all accessible under the Infrastructure menu, e.g. Infrastructure > Subnets, and can be changed in the web interface.  You can return to this set up process through <b>Infrastructure > Provisioning Setup</b> to change settings or add new provisioning capabilities.").html_safe %>
   </p>
 
   <h4><%= _("Next steps") %></h4>
