Further Rails 4 compatibility changes
Fixes issues when using the wizard, within the controllers and in the
tests.

--- a/app/views/foreman_setup/provisioners/_step2.html.erb
+++ b/app/views/foreman_setup/provisioners/_step2.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for provisioner, :url => step2_update_foreman_setup_provisioner_path do |f| %>
+<%= form_for provisioner, :url => step2_update_foreman_setup_provisioner_path, :method => 'PUT' do |f| %>
   <%= base_errors_for provisioner %>
   <%= provisioner_wizard 2 %>
 
