--- a/app/views/foreman_setup/provisioners/_step4.html.erb
+++ b/app/views/foreman_setup/provisioners/_step4.html.erb
@@ -14,7 +14,7 @@
   }
 <% end %>
 
-<%= form_for provisioner, :url => step4_update_foreman_setup_provisioner_path do |f| %>
+<%= form_for provisioner, :url => step4_update_foreman_setup_provisioner_path, :method => 'PUT' do |f| %>
   <%= base_errors_for provisioner %>
   <%= provisioner_wizard 4 %>
 
