--- a/app/views/foreman_setup/provisioners/_step3.html.erb
+++ b/app/views/foreman_setup/provisioners/_step3.html.erb
@@ -23,7 +23,9 @@
   <%= parameter %>-dhcp=true \
   <%= parameter %>-dhcp-interface=<%= provisioner.provision_interface %> \
   <%= parameter %>-dhcp-gateway=<%= provisioner.subnet.gateway %> \
+<% if provisioner.subnet.from.present? && provisioner.subnet.to.present? %>
   <%= parameter %>-dhcp-range="<%= provisioner.subnet.from %> <%= provisioner.subnet.to %>" \
+<% end %>
   <%= parameter %>-dhcp-nameservers="<%= provisioner.subnet.dns_primary %><%= ("," + provisioner.subnet.dns_secondary) unless provisioner.subnet.dns_secondary.blank? %>" \
   <%= parameter %>-dns=true \
   <%= parameter %>-dns-interface=<%= provisioner.provision_interface %> \
