Updates for 1.12 compatibility
Removes Spacewalk functionality, the form was the mess.

--- a/app/views/foreman_setup/provisioners/_step1.html.erb
+++ b/app/views/foreman_setup/provisioners/_step1.html.erb
@@ -11,24 +11,24 @@
   <div>
     <%= f.hidden_field :host_id %>
     <% if f.object.host.present? %>
-      <%= checked_icon f.object.host.present? %> <%= _("Found registered host %s") % f.object.host.name %>
+      <%= icon_text 'ok', _("Found registered host %s") % f.object.host.name, :kind => 'pficon' %>
     <% else %>
-      <%= image_tag 'foreman_setup/false.png' %> <%= _("Missing registered host %s, please ensure it is checking in") % f.object.fqdn %>
+      <%= icon_text 'error-circle-o', _("Missing registered host %s, please ensure it is checking in") % f.object.fqdn, :kind => 'pficon' %>
     <% end %>
   </div>
   <div>
     <%= f.hidden_field :smart_proxy_id %>
     <% if f.object.smart_proxy.present? %>
-      <%= checked_icon f.object.smart_proxy.present? %> <%= _("Found registered smart proxy %s") % f.object.smart_proxy.name %>
+      <%= icon_text 'ok', _("Found registered smart proxy %s") % f.object.smart_proxy.name, :kind => 'pficon' %>
     <% else %>
-      <%= image_tag 'foreman_setup/false.png' %> <%= _("Missing registered smart proxy %s, please ensure it is registered") % f.object.fqdn %>
+      <%= icon_text 'error-circle-o', _("Missing registered smart proxy %s, please ensure it is registered") % f.object.fqdn, :kind => 'pficon' %>
     <% end %>
   </div>
   <div>
     <% if f.object.host.present? && f.object.interfaces.any? %>
-      <%= checked_icon f.object.host.present? %> <%= _("Host %s has at least one network interface") % f.object.host.name %>
+      <%= icon_text 'ok', _("Host %s has at least one network interface") % f.object.host.name, :kind => 'pficon' %>
     <% else %>
-      <%= image_tag 'foreman_setup/false.png' %> <%= _("No network interfaces listed in $interfaces fact") %>
+      <%= icon_text 'error-circle-o', _("No network interfaces listed in $interfaces fact"), :kind => 'pficon' %>
     <% end %>
   </div>
 
