--- a/app/views/foreman_setup/provisioners/index.html.erb
+++ b/app/views/foreman_setup/provisioners/index.html.erb
@@ -1,8 +1,8 @@
 <% title _("Provisioning setup") %>
 
-<% title_actions display_link_if_authorized(_("Set up provisioning"), hash_for_new_foreman_setup_provisioner_path), help_path %>
+<% title_actions new_link(_("Set up provisioning")) %>
 
-<table class="table table-bordered table-striped">
+<table class="<%= table_css_classes %>">
   <tr>
     <th><%= sort :name, :as => _("Provisioning host") %></th>
     <th><%=  _("Smart proxy") %></th>
@@ -14,7 +14,7 @@
       <td><%= link_to_if_authorized h(prov.host.to_s), hash_for_edit_foreman_setup_provisioner_path(prov)%></td>
       <td><%= prov.smart_proxy.try(:name) %></td>
       <td><%= "#{prov.subnet.name} (#{prov.subnet.to_label})" if prov.subnet.present? %></td>
-      <td><%= display_delete_if_authorized hash_for_foreman_setup_provisioner_path(prov), :confirm => _("Delete %s?") % prov.host.to_s %></td>
+      <td><%= action_buttons(display_delete_if_authorized(hash_for_foreman_setup_provisioner_path(prov), :confirm => _("Delete %s?") % prov.host.to_s)) %></td>
     </tr>
   <% end %>
 </table>
